# petsy

./: PETSY_TECH_SPEC.md  README.md  pyproject.toml
app/: __init__.py  main.py  models.py  repository.py
tests/: test_api.py
